--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -11,13 +11,7 @@ jobs:
     environment: GCP_PROJECT_ID
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4  
-
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}    
+        uses: actions/checkout@v4      
 
       - name: Download Cloud SQL Auth Proxy
         run: |
@@ -29,17 +23,23 @@ jobs:
           gcloud iam service-accounts keys create key.json --iam-account=github-actions-deployer@project-capstone-468109.iam.gserviceaccount.com
 
       - name: Start Cloud SQL Auth Proxy
-        run: |          
+        run: |
+          # Save the service account JSON key from secrets to a file
+          echo "${{ secrets.GCP_SA_KEY }}" > sa-key.json
+
           # list files to verify the key is saved
           echo "Listing files in the current directory:"          
-          ls -la                    
+          ls -la
+          
+          echo "Contents of sa-key.json:"
+          cat sa-key.json
 
           # Build the connection name from secrets
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"          
 
           # Start the Cloud SQL Auth Proxy with credentials file
           ./cloud-sql-proxy \
-            --credentials-file ./key.json \
+            --credentials-file ./sa-key.json \
             "$INSTANCE_CONNECTION_NAME" &
           echo $! > proxy.pid
 
