auth cloud proxy for cloudsql

--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -17,7 +17,9 @@ jobs:
         run: |
           curl -o cloud-sql-proxy https://storage.googleapis.com/cloud-sql-connectors/cloud-sql-proxy/v2.18.0/cloud-sql-proxy.linux.amd64
           chmod +x cloud-sql-proxy             
-
+      - name: Debug SA key
+        run: |
+          printf "%s" "${{ secrets.GCP_SA_KEY }}" | head -c 50
       - name: Start Cloud SQL Auth Proxy
         run: |
           # Save the service account JSON key from secrets to a file
