--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -31,6 +31,8 @@ jobs:
           
           echo "Contents of sa-key.json:"
           cat sa-key.json
+          echo "Contents of key.json:"
+          cat key.json
 
           # Build the connection name from secrets
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"          
