--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -39,7 +39,7 @@ jobs:
 
           # Start the Cloud SQL Auth Proxy with credentials file
           ./cloud-sql-proxy \
-            --credentials-file ./sa-key.json \
+            --credentials-file ./key.json \
             "$INSTANCE_CONNECTION_NAME" &
           echo $! > proxy.pid
 
