--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -23,16 +23,7 @@ jobs:
               echo '${{ secrets.GCP_SA_KEY }}' | tr -d '\r' > sa-key.json
 
       - name: Start Cloud SQL Auth Proxy
-        run: |          
-          # list files to verify the key is saved
-          echo "Listing files in the current directory:"          
-          ls -la
-          
-          echo "Contents of sa-key.json:"
-          cat sa-key.json
-          echo "Contents of key.json:"
-          cat key.json
-
+        run: |                    
           # Build the connection name from secrets
           INSTANCE_CONNECTION_NAME="${{ secrets.GCP_PROJECT_ID }}:${{ secrets.GCP_REGION }}:${{ secrets.DB_INSTANCE }}"          
 
@@ -45,19 +36,18 @@ jobs:
           # Wait until the proxy is ready (check if port 3306 is open)
           for i in {1..10}; do
             if nc -z 127.0.0.1 3306; then
-              echo "✅ Cloud SQL Proxy is ready"
+              echo "Cloud SQL Proxy is ready"
               break
             fi
             echo "⏳ Waiting for Cloud SQL Proxy..."
             sleep 2
           done
 
-
       - name: Run SQL scripts on Cloud SQL
         run: |
           set -e  # Exit immediately if a command fails
           for script in db_drop.sql db_create.sql db_load.sql; do
-            echo "▶️ Running $script..."
+            echo "Running $script..."
             mysql -u ${{ secrets.DB_USER }} \
                   -p${{ secrets.DB_PASS }} \
                   -D ${{ secrets.DB_NAME }} \
@@ -70,6 +60,6 @@ jobs:
         run: |
           if [ -f proxy.pid ]; then
             kill $(cat proxy.pid) || true
-            echo "🛑 Cloud SQL Proxy stopped"
+            echo "Cloud SQL Proxy stopped"
           fi
           rm -f proxy.pid sa-key.json
