--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: GCP_PROJECT_ID
+    environment: Production
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
