change trigger condition

--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -3,7 +3,9 @@ name: Execute SQL scripts on Cloud SQL
 on:
   push:
     branches:
-      - db-deployment      
+      - db-deployment
+    paths:
+      - src/lib/server/db_schema/db_*.sql            
 
 jobs:
   execute-sql:
