--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "auth:migrate": "dotenv -e .env.local -- npx @better-auth/cli migrate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -42,17 +43,19 @@
     "mysql2": "^3.14.1",
     "next": "15.3.0",
     "next-swagger-doc": "^0.4.1",
+    "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.62.0",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "swagger-ui-react": "^5.3.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.2",
+    "zod": "^3.25.76",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
