deploy branch feat/qr-generation to demo with supervisor

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:      
       - master      
+      - feat/qr-genration
     paths-ignore:
       - src/lib/server/db_schema/db_*.sql
 
