--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:      
       - master      
-      - feat/qr-genration
+      - feat/qr-generation
     paths-ignore:
       - src/lib/server/db_schema/db_*.sql
 
