add login with microsoft api

--- a/.env.local
+++ b/.env.local
@@ -7,5 +7,7 @@ BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
 
 GOOGLE_CLIENT_ID=722448805136-8ufkc1224mj8u68b87l4fnmt721apn8e.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
+MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
 BASE_URL=http://localhost:3000
