--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "swagger-ui-react": "^5.3.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
