Add automated email reminder system for student attendance
- Implement comprehensive email notification system for students below 80% attendance threshold
- Add three-tier escalation system (first reminder, warning, critical notice)
- Create attendance calculation service with caching for performance
- Add email service with professional HTML templates and SMTP integration
- Implement automated daily processing with cron job endpoint
- Add admin API endpoints for manual processing and configuration
- Create React hooks for frontend integration
- Add comprehensive documentation and testing guides
- Include database schema updates for email logging and settings
- Add development scripts for testing and database setup
- Update package dependencies (tsx, dotenv) for email functionality

Features:
- Smart duplicate prevention (24-hour cooldown)
- Course-specific configuration (thresholds, session counts)
- Complete audit trail of email communications
- Multi-role notifications (students + lecturers for critical cases)
- Professional email templates with personalized content
- Security with authentication for admin endpoints

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=Deepak7314@
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
@@ -11,3 +11,14 @@ MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
 BASE_URL=https://free-condor-vastly.ngrok-free.app
+
+# Email Service Configuration (Test Account)
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=vknsmx3cuesasvo6@ethereal.email
+SMTP_PASS=U5aWcUe7tA64PsU33R
+SMTP_FROM_EMAIL=vknsmx3cuesasvo6@ethereal.email
+
+# Cron Job Security
+CRON_SECRET=test-secret-key-123
