--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc --noEmit && npm run lint"    
+    "check": "tsc --noEmit && npm run lint",
+    "auth:migrate": "dotenv -e .env.local -- npx @better-auth/cli migrate",
+    "attendance:reminders": "dotenv -e .env.local -- tsx src/scripts/processAttendanceReminders.ts",
+    "attendance:test-reminder": "dotenv -e .env.local -- tsx src/scripts/processAttendanceReminders.ts test"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
@@ -30,7 +33,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.12",
+    "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.74.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode.react": "^1.0.5",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.8.4",
@@ -40,12 +46,16 @@
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "html5-qrcode": "^2.3.8",
+    "lightningcss": "^1.30.1",
+    "lightningcss-win32-x64-msvc": "^1.30.1",
     "lucide-react": "^0.488.0",
     "mysql2": "^3.14.1",
     "next": "15.3.0",
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
@@ -56,12 +66,14 @@
     "sonner": "^2.0.7",
     "swagger-ui-react": "^5.3.2",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
-    "zod": "^3.25.76"
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
+    "zod": "^3.25.76",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@swc/core-win32-x64-msvc": "^1.13.5",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.19.10",
     "@types/qrcode": "^1.5.5",
@@ -73,8 +85,8 @@
     "eslint-config-next": "15.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "overrides": {
