deploy demo-week6

--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - feat/qr-scan-student
+      - demo-week6
     paths:
       - src/lib/server/db_schema/db_*.sql
 
