feat: implement email reminder system for partial attendance
- Add email service with SMTP configuration
- Add attendance service to track partial attendance
- Add admin endpoints for testing email functionality
- Add database schema for email logging
- Add email reminder workflow for students with 30% attendance

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=Deepak7314@
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
@@ -10,4 +10,10 @@ GOOGLE_CLIENT_SECRET=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
 MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
-BASE_URL=http://localhost:3000
+BASE_URL=http://localhost:3004
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password
