--- a/.env.local
+++ b/.env.local
@@ -10,15 +10,15 @@ GOOGLE_CLIENT_SECRET=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
 MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
-BASE_URL=https://free-condor-vastly.ngrok-free.app
+BASE_URL=http://localhost:3001
 
-# Email Service Configuration (Test Account)
-SMTP_HOST=smtp.ethereal.email
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=vknsmx3cuesasvo6@ethereal.email
-SMTP_PASS=U5aWcUe7tA64PsU33R
-SMTP_FROM_EMAIL=vknsmx3cuesasvo6@ethereal.email
+# EmailJS Configuration (Free Email Service)
+EMAILJS_SERVICE_ID=service_fkchdgx
+EMAILJS_TEMPLATE_ID=template_yyyljh4
+EMAILJS_PUBLIC_KEY=8wu2S-k5FszBVMf5o
 
 # Cron Job Security
 CRON_SECRET=test-secret-key-123
+
+# Gmail App Password for automatic emails
+GMAIL_APP_PASSWORD=cunh hzkp icbt foiv
