--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "check": "tsc --noEmit && npm run lint",
     "auth:migrate": "dotenv -e .env.local -- npx @better-auth/cli migrate",
     "attendance:reminders": "dotenv -e .env.local -- tsx src/scripts/processAttendanceReminders.ts",
-    "attendance:test-reminder": "dotenv -e .env.local -- tsx src/scripts/processAttendanceReminders.ts test"
+    "attendance:test-reminder": "dotenv -e .env.local -- tsx src/scripts/processAttendanceReminders.ts test",
+    "attendance:monitor": "dotenv -e .env.local -- tsx src/scripts/automaticAttendanceMonitor.ts"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -33,6 +35,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/oxide-win32-x64-msvc": "^4.1.12",
     "@tailwindcss/postcss": "^4.1.12",
     "@tanstack/react-query": "^5.74.0",
