add dummy data khoa creates qr all day for study session  26

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master      
+      - demo-week8
     paths-ignore:
       - src/lib/server/db_schema/db_*.sql
 
