--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=Deepak7314@
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
@@ -10,4 +10,22 @@ GOOGLE_CLIENT_SECRET=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
 MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
-BASE_URL=https://free-condor-vastly.ngrok-free.app
+BASE_URL=http://localhost:3001
+
+# Email System Configuration
+SYSTEM_EMAIL_KEY=attendance_email_system_2024
+
+# Gmail SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=qrattendancesystem2025@gmail.com
+SMTP_PASS=xjid lkdd adro kvrx
+FROM_EMAIL=qrattendancesystem2025@gmail.com
+FROM_NAME=QR Attendance System
+
+# Automatic Email System Settings
+AUTO_EMAIL_ENABLED=true
+EMAIL_CHECK_INTERVAL=2
+# Enhanced real-time settings
+EMAIL_CHECK_INTERVAL_SECONDS=60
+EMAIL_LOOKBACK_MINUTES=5
