--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=Deepak7314@
+DB_PASS=
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
@@ -10,7 +10,7 @@ GOOGLE_CLIENT_SECRET=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
 MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
-BASE_URL=http://localhost:3001
+BASE_URL=https://free-condor-vastly.ngrok-free.app
 
 # Email System Configuration
 SYSTEM_EMAIL_KEY=attendance_email_system_2024
