--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc --noEmit && npm run lint"    
+    "check": "tsc --noEmit && npm run lint"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
@@ -46,6 +46,8 @@
     "next": "15.3.0",
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
@@ -64,6 +66,8 @@
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.19.10",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
