Fix local development configuration
- Restore database password for local testing
- Re-enable TailwindCSS PostCSS plugin for proper styling
- Restore Turbopack for faster development builds

Ready for production deployment testing on feature branch.

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=
+DB_PASS=Deepak7314@
 DB_NAME=qr_attendance_app
 
 BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
