--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc --noEmit && npm run lint"    
+    "check": "tsc --noEmit && npm run lint",    
+    "db:init": "bash scripts/db-init.sh"
   },
   "dependencies": {
     "@better-fetch/fetch": "^1.1.18",
