--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc --noEmit && npm run lint",
+    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint",
     "db:init": "bash scripts/db-init.sh"
   },
   "dependencies": {
-    "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -35,11 +34,9 @@
     "@types/qrcode.react": "^1.0.5",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.8.4",
-    "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.488.0",
@@ -48,7 +45,6 @@
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
-    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
