--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
     "check": "tsc -p tsconfig.check.json --noEmit && npm run lint",
-    "db:init": "bash scripts/db-init.sh"
+    "db:init": "bash scripts/db-init.sh",
+    "db:setup": "bash scripts/setup-test-windows.sh",
+    "db:activate": "bash scripts/activate-second-window.sh",
+    "db:setup-geo": "bash scripts/setup-test-windows-geo.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -37,6 +40,7 @@
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.488.0",
