Simplify environment configuration
- Keep only essential SMTP configs in .env.local: SMTP_USER, SMTP_PASS, SMTP_PORT
- Move SMTP_HOST and FROM_NAME to hardcoded values in API routes
- Use SMTP_USER as FROM_EMAIL for consistency

🤖 Generated with team configuration management

--- a/.env.local
+++ b/.env.local
@@ -9,20 +9,7 @@ MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
 BASE_URL=http://localhost:3000
 
-# Email System Configuration
-SYSTEM_EMAIL_KEY=attendance_email_system_2024
-
-# Gmail SMTP Configuration
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+# Essential SMTP Configuration
 SMTP_USER=qrattendancesystem2025@gmail.com
 SMTP_PASS=xjid lkdd adro kvrx
-FROM_EMAIL=qrattendancesystem2025@gmail.com
-FROM_NAME=QR Attendance System
-
-# Automatic Email System Settings
-AUTO_EMAIL_ENABLED=true
-EMAIL_CHECK_INTERVAL=2
-# Enhanced real-time settings
-EMAIL_CHECK_INTERVAL_SECONDS=60
-EMAIL_LOOKBACK_MINUTES=5
+SMTP_PORT=587
