deploy demo-week10

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,8 @@ name: Deploy to Cloud Run
 on:
   push:
     branches:
-      - master      
+      - master    
+      - demo-week10  
     paths-ignore:
       - src/lib/server/db_schema/db_*.sql
 
