--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.74.0",
     "@types/qrcode.react": "^1.0.5",
     "@yudiel/react-qr-scanner": "^2.3.1",
@@ -41,13 +42,14 @@
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "lightningcss": "^1.30.1",
+    "lightningcss-win32-x64-msvc": "^1.30.1",
     "lucide-react": "^0.488.0",
     "mysql2": "^3.14.1",
     "next": "15.3.0",
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.6",
+    "node-fetch": "^3.3.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
@@ -58,16 +60,15 @@
     "sonner": "^2.0.7",
     "swagger-ui-react": "^5.3.2",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.2.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.19.10",
     "@types/node-cron": "^3.0.11",
-    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -77,9 +78,8 @@
     "eslint-config-next": "15.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "5.9.2"
   },
   "overrides": {
     "swagger-ui-react": {
