--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.74.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode.react": "^1.0.5",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.8.4",
@@ -49,7 +50,9 @@
     "next": "15.3.0",
     "next-swagger-doc": "^0.4.1",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
