--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reactour/tour": "^3.8.0",
     "@tanstack/react-query": "^5.74.0",
     "@yudiel/react-qr-scanner": "^2.3.1",
