--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -7,6 +7,7 @@ on:
       - demo-week10-temp
     paths:
       - src/lib/server/db_schema/db_*.sql
+      - src/lib/server/db_schema/qr_attendance_app.sql
 
 jobs:
   execute-sql:
