deploy: fix dummy data loading error

--- a/.github/workflows/init-db.yaml
+++ b/.github/workflows/init-db.yaml
@@ -6,8 +6,7 @@ on:
       - master
       - demo-week10-temp
     paths:
-      - src/lib/server/db_schema/db_*.sql
-      - src/lib/server/db_schema/qr_attendance_app.sql
+      - src/lib/server/db_schema/db_*.sql      
 
 jobs:
   execute-sql:
@@ -50,7 +49,7 @@ jobs:
       - name: Run SQL scripts on Cloud SQL
         run: |
           set -e  # Exit immediately if a command fails
-          for script in db_drop.sql qr_attendance_app.sql; do
+          for script in db_drop.sql db_create.sql db_dummy_load.sql; do
             echo "Running $script..."
             mysql -u ${{ secrets.DB_USER }} \
                   -p${{ secrets.DB_PASS }} \
