--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint"    
+    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -61,6 +61,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.19.10",
