fix: mismatch_ state betterauth

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+NODE_ENV = production
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
@@ -7,6 +8,7 @@ BETTER_AUTH_SECRET=9NwcvVxTTSBLsjd1uxukjws38JtaahGN
 MICROSOFT_CLIENT_ID=0529d744-abfe-412f-abe0-50001a4fd12c
 MICROSOFT_CLIENT_SECRET=znj8Q~AN2zrLK6PHwfB9IOUrWwHo23A2LLAikbUq
 
+NEXT_PUBLIC_APP_URL = https://jc3dn-qr-attendance-kosgs4isma-ts.a.run.app
 BASE_URL=http://localhost:3000
 
 # Essential SMTP Configuration
