--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc --noEmit && npm run lint"
+    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint"
   },
   "dependencies": {
-    "@better-fetch/fetch": "^1.1.18",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
@@ -30,21 +31,20 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@reactour/tour": "^3.8.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-query": "^5.74.0",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode.react": "^1.0.5",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "axios": "^1.8.4",
-    "bcryptjs": "^3.0.2",
-    "better-auth": "^1.3.4",
+    "better-auth": "^1.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "crypto": "^1.0.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
-    "lightningcss": "^1.30.1",
-    "lightningcss-win32-x64-msvc": "^1.30.1",
     "lucide-react": "^0.488.0",
     "mysql2": "^3.14.1",
     "next": "15.3.0",
@@ -54,7 +54,6 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
-    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
@@ -65,13 +64,17 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^10.0.0",
+    "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.19.10",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -79,6 +82,7 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "lightningcss": "^1.30.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "ts-node": "^10.9.2",
@@ -89,5 +93,8 @@
       "react": "^19.0.0",
       "react-dom": "^19.0.0"
     }
+  },
+  "optionalDependencies": {
+    "lightningcss-win32-x64-msvc": "^1.30.2"
   }
 }
