Updated attendance tracking UI to include session type badges for better clarity. - Added online check-in and geo validation error dialogs to the check-in page

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "db:init": "bash ./scripts/db-init.sh",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
     "check": "tsc -p tsconfig.check.json --noEmit && npm run lint"
