--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "db:init": "bash ./scripts/db-init.sh",
     "format": "prettier . --write",
     "clean": "rm -rf node_modules .next package-lock.json",
-    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint"
+    "check": "tsc -p tsconfig.check.json --noEmit && npm run lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -73,7 +76,11 @@
     "@eslint/eslintrc": "^3",
     "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.19.10",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
@@ -84,9 +91,12 @@
     "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "lightningcss": "^1.30.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "5.9.2"
   },
